@@ -256,13 +256,13 @@ class DiffTests(TestCase):
         changed2 = Blob.from_string("unchanged\nadded\n")
         unchanged = Blob.from_string("unchanged\n")
         tree1 = Tree()
-        tree1.add(0644, "removed.txt", removed.id)
-        tree1.add(0644, "changed.txt", changed1.id)
-        tree1.add(0644, "unchanged.txt", changed1.id)
+        tree1.add("removed.txt", 0644, removed.id)
+        tree1.add("changed.txt", 0644, changed1.id)
+        tree1.add("unchanged.txt", 0644, changed1.id)
         tree2 = Tree()
-        tree2.add(0644, "added.txt", added.id)
-        tree2.add(0644, "changed.txt", changed2.id)
-        tree2.add(0644, "unchanged.txt", changed1.id)
+        tree2.add("added.txt", 0644, added.id)
+        tree2.add("changed.txt", 0644, changed2.id)
+        tree2.add("unchanged.txt", 0644, changed1.id)
         store.add_objects([(o, None) for o in [
             tree1, tree2, added, removed, changed1, changed2, unchanged]])
         write_tree_diff(f, store, tree1.id, tree2.id)
